cloudformation/us-east-1/us-vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creating the VPC for region 2

Resources:

  UsVpc:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.32.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true 
      Tags:
        - Key: Name
          Value: my-vpc-us-east-1 

  UsInternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: UsVpc
    Properties:
      Tags:
        - Key: Name
          Value: my-igw-us-east-1

  AttachUsGateway: 
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: 
        - UsInternetGateway
    Properties:
      InternetGatewayId: !Ref UsInternetGateway
      VpcId: !Ref UsVpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref UsVpc 
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      CidrBlock: 10.32.0.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: my-public-subnet-az1-us-east-1
  
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref UsVpc
      AvailabilityZone: !Select [1, !GetAZs "" ]
      CidrBlock: 10.32.16.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: my-public-subnet-az2-us-east-1
    
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref UsVpc
      AvailabilityZone: !Select [0, !GetAZs "" ]
      MapPublicIpOnLaunch: false
      CidrBlock: 10.32.32.0/20
      Tags:
        - Key: Name
          Value: my-private-subnet-az1-us-east-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      VpcId: !Ref UsVpc
      AvailabilityZone: !Select [1, !GetAZs "" ]
      MapPublicIpOnLaunch: false
      CidrBlock: 10.32.48.0/20
      Tags: 
        - Key: Name
          Value: my-private-subnet-az2-us-east-1

  ElasticIp1:
    Type: AWS::EC2::EIP
    Properties: 
      Domain: vpc
      Tags:
        - Key: Name
          Value: eip1-Nat-Gateway-Subnet-1

  ElasticIp2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags: 
        - Key: Name
          Value: eip2-Nat-Gateway-Subnet-2
  
  NatGatewayAz1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIp1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: us-nat-gw-az1

  NatGatewayAz2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIp2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: us-nat-gw-az2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref UsVpc 
      Tags:
        - Key: Name
          Value: my-public-rt-us-east-1
  
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref UsVpc
      Tags: 
        - Key: Name
          Value: us-private-rt-az1-us-east-1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref UsVpc
      Tags:
        - Key: Name
          Value: us-private-rt-az2-us-east-1
  
  PublicRtAssociations1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  
  PublicRtAssociations2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRtAssociations1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRtAssociations2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachUsGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref UsInternetGateway
  
  PrivateRoute1External:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayAz1

  PrivateRoute2External:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayAz2
  
Outputs: 

  UsVpcId:
    Description: The VPC for the US Region
    Value: !Ref UsVpc
    Export:
      Name: us-east-1-vpc
      
  PublicSubnet1Id:
    Description: The first public subnet for the US VPC
    Value: !Ref PublicSubnet1
    Export:
      Name: us-east-1-vpc-public-subnet-1
  
  PublicSubnet2Id:
    Description: The second public subnet for the US VPC
    Value: !Ref PublicSubnet2
    Export:
      Name: us-east-1-vpc-public-subnet-2
    
  PrivateSubnet1Id:
    Description: The first private subnet for the US VPC
    Value: !Ref PrivateSubnet1
    Export:
      Name: us-east-1-vpc-private-subnet-1
    
  PrivateSubnet2Id:
    Description: The second private subnet for the US VPC
    Value: !Ref PrivateSubnet2
    Export:
      Name: us-east-1-vpc-private-subnet-2
    
  PublicRouteTableId:
    Description: The public route table for the US VPC
    Value: !Ref PublicRouteTable
    Export:
      Name: us-east-1-vpc-public-rt
  
  PrivateRouteTable1Id:
    Description: The first private route table for the US VPC
    Value: !Ref PrivateRouteTable1
    
  PrivateRouteTable2Id:
    Description: The second private route table for the US VPC
    Value: !Ref PrivateRouteTable2
